--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="Marcos Hernández Campos" />
-    <link rel="stylesheet" type="text/css" href="" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>Hello Microverse!</h1>
+      <h1 class="microverse-header">Hello Microverse!</h1>
     </header>
     <nav></nav>
   </body>
